--- a/public/Kanbas/Courses/Assignments/AssignmentEditor/screen.html
+++ b/public/Kanbas/Courses/Assignments/AssignmentEditor/screen.html
@@ -1,3 +1,6 @@
+<!-- Assignments
+<a href="/Kanbas/Courses/Assignments/AssignmentEditor/screen.html">Assignment 1</a> -->
+
 <table>
     <tr>
         <td valign="top">
@@ -94,7 +97,7 @@
 
             <h3>Assign</h3>
             <h3>Assign To</h3>
-            <input value="Everyone" type="text"/>
+            <input value="Everyone" type="text" />
 
             <h3>Due</h3>
             <input type="date">
@@ -103,7 +106,7 @@
             <input type="date">
 
             <h3>Until</h3>
-            <input type="date"> <br/>
+            <input type="date"> <br />
 
             <button><a href="/Kanbas/Courses/Assignments/index.html">Cancel</a></button>
             <button><a href="/Kanbas/Courses/Assignments/index.html">Save</a></button>
