--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,11 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <body>
+      <a href="./labs/a1/index.html">labs</a>
+      <a href="./Kanbas/Courses/Home/screen.html">Kanbas</a>
+    </body>
+    <!-- <div id="root"></div> -->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
