--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <body>
-      <a href="./labs/a1/index.html">labs</a>
-      <a href="./Kanbas/Courses/Home/screen.html">Kanbas</a>
+      <a href="./labs/a1/index.html">labs - a1</a> <br/>
+      <a href="./Kanbas/Courses/Home/screen.html">A1 - Kanbas</a>
     </body>
     <!-- <div id="root"></div> -->
     <!--
