first assignment revised

--- a/public/Kanbas/Account/Profile/screen.html
+++ b/public/Kanbas/Account/Profile/screen.html
@@ -29,7 +29,7 @@
         <td valign="top">
             Hannah Chiu's Profile
             <hr /> <br/>
-            <button><a href="/Kanbas/Account/Profile/EditProfile/screen.html">Edit Profile</a></button>
+            <button style="float:right;"><a href="/Kanbas/Account/Profile/EditProfile/screen.html">Edit Profile</a></button>
             <h2>Hannah Chiu</h2>
             <h3>Contact</h3>
             No registered services, you can add some on the <a href="/Kanbas/Account/Settings/screen.html">settings</a> page.
