--- a/public/Kanbas/Courses/Settings/navigation.html
+++ b/public/Kanbas/Courses/Settings/navigation.html
@@ -38,8 +38,8 @@
             </ul>
         </td>
         <td valign="top">
-            <button>Course Details</button>
-            <button>Navigation</button>
+            <button><a href="/Kanbas/Courses/Settings/screen.html">Course Details</a></button>
+            <button><a href="/Kanbas/Courses/Settings/navigation.html">Navigation</a></button>
             <hr />
             Drag and drop items to reorder them in the navigation.<br/>
             <table border="1">
