--- a/public/Kanbas/Courses/Settings/screen.html
+++ b/public/Kanbas/Courses/Settings/screen.html
@@ -38,8 +38,8 @@
             </ul>
         </td>
         <td valign="top">
-            <button>Course Details</button>
-            <button>Navigation</button>
+            <button><a href="/Kanbas/Courses/Settings/screen.html">Course Details</a></button>
+            <button><a href="/Kanbas/Courses/Settings/navigation.html">Navigation</a></button>
             <hr />
             <h1>Course Details</h1>
             Image:
